Gestion de la partie simple, des scores, meilleure utilisation des dictionnaires, correction des erreurs de segmentation

--- a/Graphique/Makefile
+++ b/Graphique/Makefile
@@ -4,19 +4,15 @@ DEBUG=true# Mettre à true pour compiler en mode debug (options de débogage)
 RELEASE=false# Mettre à true pour compiler en mode release (options d'optimisation)
 
 CC=gcc # Le compilateur C
-#Les options de compilation
+# Les options de compilation générales
+CFLAGS=-ansi -pedantic -W -Wall -Wno-unused-parameter `pkg-config --cflags gtk+-2.0`
+# Les options de compilation spécifiques au mode (debug/release)
+# Si RELEASE et DEBUG sont tous deux à true, seul debug sera activé
+ifeq ($(RELEASE), true)
+	$CFLAGS2=-03
+endif
 ifeq ($(DEBUG), true)
-	ifeq ($(RELEASE), true)
-		CFLAGS=-ansi -pedantic -W -Wall -Wno-unused-parameter `pkg-config --cflags gtk+-2.0` -g -O3
-	else
-		CFLAGS=-ansi -pedantic -W -Wall -Wno-unused-parameter `pkg-config --cflags gtk+-2.0` -g
-	endif
-else
-	ifeq ($(RELEASE), true)
-		CFLAGS=-ansi -pedantic -W -Wall -Wno-unused-parameter `pkg-config --cflags gtk+-2.0` -03
-	else
-		CFLAGS=-ansi -pedantic -W -Wall -Wno-unused-parameter `pkg-config --cflags gtk+-2.0`
-	endif
+	$CFLAGS2=-g
 endif
 LDFLAGS=`pkg-config --libs gtk+-2.0` # Les options de l'éditeur de liens
 EXEC=Motus # Le nom de l'exécutable
@@ -25,15 +21,17 @@ OBJ=$(SRC:.c=.o) # Les fichiers objet
 
 all: $(EXEC)
 
-Motus.o: Jeu.h Affichage.h Types.h
-Affichage.o: Jeu.h Affichage.h Types.h
-Jeu.o: Affichage.h Types.h
+# Indique les dépendances (fichiers .h et Makefile) pour qu'en cas de modifications de ceux-ci,
+# le programme puisse être recompilé sans avoir à faire de make clean
+Motus.o: Jeu.h Affichage.h Types.h Makefile
+Affichage.o: Jeu.h Affichage.h Types.h Makefile
+Jeu.o: Affichage.h Types.h Makefile
 
 $(EXEC): $(OBJ)
 	@$(CC) $^ -o $@ $(LDFLAGS)
 
 %.o:%.c
-	@$(CC) -o $@ -c $< $(CFLAGS)
+	@$(CC) -o $@ -c $< $(CFLAGS) $(CFLAGS2)
 
 .PHONY: clean mrproper
 
